--- a/week -5/sliding window _ two pointers 2nd part/.vscode/settings.json
+++ b/week -5/sliding window _ two pointers 2nd part/.vscode/settings.json
@@ -59,5 +59,12 @@
   "files.associations": {
     "*.embeddedhtml": "html",
     "iostream": "cpp"
+  },
+  "github.copilot.enable": {
+    "*": false,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false,
+    "cpp": false
   }
 }
